--- a/MessageRead.html
+++ b/MessageRead.html
@@ -14,9 +14,9 @@
     <!-- <script src="Scripts/Office/1/office.js" type="text/javascript"></script>  -->
 
     <script src="MessageRead.js" type="text/javascript"></script>
-    <script src="Scripts/MessageBanner.js" type="text/javascript"></script>
-    <link href="Content/Button.css" rel="stylesheet" type="text/css" />
-    <link href="Content/MessageBanner.css" rel="stylesheet" type="text/css" />
+    <script src="MessageBanner.js" type="text/javascript"></script>
+    <link href="Button.css" rel="stylesheet" type="text/css" />
+    <link href="MessageBanner.css" rel="stylesheet" type="text/css" />
     <link href="MessageRead.css" rel="stylesheet" type="text/css" />
 
 
