--- a/MessageRead.html
+++ b/MessageRead.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title></title>
-    <script src="Scripts/jquery-3.6.0.js" type="text/javascript"></script>
+    <script src="jquery-3.6.0.js" type="text/javascript"></script>
 
     <!-- To learn more about JavaScript APIs for Office, see https://aka.ms/officejs-overview to learn more. -->
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
