--- a/MessageRead.html
+++ b/MessageRead.html
@@ -31,7 +31,7 @@
 
 </head>
 <body>
-    terst
+    terst2
     <div>
         <iframe id="canvas-iframe" height="800" frameborder="0" />
     </div>
